AUT-4573: Filter nulls and duplicates in getCountsByJourneyForIdentifiers
- Add null filtering and duplicate removal in getCountsByJourneyForIdentifiers
- Use Arrays.asList() instead of List.of() to allow null values in method parameters
- Update CheckReAuthUserHandler to use Arrays.asList() for identifier lists

This prevents NullPointerException when getInternalCommonSubjectId or rpPairwiseId are null, and ensures duplicate identifiers don't inflate authentication attempt counts.